--- a/.env.dev.sample
+++ b/.env.dev.sample
@@ -1,5 +1,5 @@
 DATABASE_HOST=db
-DATABASE_PORT=5432
-DATABASE_USER=postgres
+DATABASE_PORT=3306
+DATABASE_USER=root
 DATABASE_PASSWORD=password
 EDITOR=vim
