--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '2'
+version: '3'
 services:
   rails:
     build:
@@ -16,18 +16,19 @@ services:
     depends_on:
       - db
   db:
-    image: "postgres:10.3"
+    image: "mysql:5.7"
     environment:
-      - "POSTGRES_USER=postgres"
-      - "POSTGRES_PASSWORD=password"
+      - "MYSQL_ALLOW_EMPTY_PASSWORD=1"
+#      - "POSTGRES_USER=root"
+#      - "POSTGRES_PASSWORD=password"
     volumes_from:
       - data
     ports:
-      - "5432:5432"
+      - "13307:3306"
   data:
     image: "busybox"
     volumes:
-      - "db:/var/lib/postgresql/data"
+      - "db:/var/lib/mysql"
       - "bundle:/usr/local/bundle"
 
 volumes:
