--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -35,4 +35,4 @@ WORKDIR /app
 
 ENTRYPOINT [ \
     "prehook", "ruby -v", "--", \
-    "prehook", "bundle install -j3 --quiet", "--"]
+    "prehook", "bundle install -j3 --quiet --path vendor/bundle", "--"]
